--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/vollmed_api
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=prrp
+spring.datasource.password=173251
 
 spring.jpa.show-sql=true
